--- a/Data analysis 12.html
+++ b/Data analysis 12.html
@@ -33,6 +33,8 @@ ul.task-list li input[type="checkbox"] {
 <script src="Data analysis 12_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="Data analysis 12_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="Data analysis 12_files/libs/bootstrap/bootstrap-c0367b04c37547644fece4185067e4a7.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<script src="Data analysis 12_files/libs/kePrint-0.0.1/kePrint.js"></script>
+<link href="Data analysis 12_files/libs/lightable-0.0.1/lightable.css" rel="stylesheet">
 
 
 </head>
@@ -91,6 +93,30 @@ $ BMIgroup  &lt;chr&gt; "Obese", "Overweight", "Normal", "Normal", "Normal", "No
 <h1>Exploratory data analysis</h1>
 <section id="data-overview" class="level2">
 <h2 class="anchored" data-anchor-id="data-overview">Data Overview</h2>
+<div class="cell">
+<div class="cell-output cell-output-stdout">
+<pre><code>  Age    Sex               Education Year   BMIgroup
+1  48 Female       No qualifications 2016      Obese
+2  51   Male        Degree or higher 2016 Overweight
+3  48 Female        Degree or higher 2016     Normal
+4  16 Female       No qualifications 2016     Normal
+5  61   Male Standard grade or equiv 2016     Normal
+6  40 Female        Degree or higher 2016     Normal</code></pre>
+</div>
+<div class="cell-output cell-output-stdout">
+<pre><code>Rows: 14,017
+Columns: 5
+$ Age       &lt;int&gt; 48, 51, 48, 16, 61, 40, 43, 40, 39, 45, 18, 29, 36, 37, 78, …
+$ Sex       &lt;chr&gt; "Female", "Male", "Female", "Female", "Male", "Female", "Mal…
+$ Education &lt;chr&gt; "No qualifications", "Degree or higher", "Degree or higher",…
+$ Year      &lt;int&gt; 2016, 2016, 2016, 2016, 2016, 2016, 2016, 2016, 2016, 2016, …
+$ BMIgroup  &lt;chr&gt; "Obese", "Overweight", "Normal", "Normal", "Normal", "Normal…</code></pre>
+</div>
+<div class="cell-output cell-output-stdout">
+<pre><code>      Age       Sex Education      Year  BMIgroup 
+        0         0         0         0         0 </code></pre>
+</div>
+</div>
 <p>The dataset consists of 14,017 observations with the following columns:</p>
 <p><strong>Age</strong>: Age of individuals</p>
 <p><strong>Sex</strong>: Gender of individuals (Male/Female)</p>
@@ -103,163 +129,68 @@ $ BMIgroup  &lt;chr&gt; "Obese", "Overweight", "Normal", "Normal", "Normal", "No
 <p>Computing descriptive statistics helps understand the distribution of the data.</p>
 <div class="cell">
 <div class="cell-output-display">
-<table class="caption-top table table-sm table-striped small">
-<caption>Data summary</caption>
-<tbody>
-<tr class="odd">
-<td style="text-align: left;">Name</td>
-<td style="text-align: left;">obesity</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Number of rows</td>
-<td style="text-align: left;">14017</td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Number of columns</td>
-<td style="text-align: left;">5</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">_______________________</td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Column type frequency:</td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">character</td>
-<td style="text-align: left;">3</td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">numeric</td>
-<td style="text-align: left;">2</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">________________________</td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Group variables</td>
-<td style="text-align: left;">None</td>
-</tr>
-</tbody>
-</table>
-<p><strong>Variable type: character</strong></p>
-<table class="caption-top table table-sm table-striped small">
-<colgroup>
-<col style="width: 19%">
-<col style="width: 13%">
-<col style="width: 19%">
-<col style="width: 5%">
-<col style="width: 5%">
-<col style="width: 8%">
-<col style="width: 12%">
-<col style="width: 15%">
-</colgroup>
+<table class="table table-striped table-hover caption-top table-sm small" data-quarto-postprocess="true">
+<caption>Summary Statistics of the Dataset</caption>
 <thead>
 <tr class="header">
-<th style="text-align: left;">skim_variable</th>
-<th style="text-align: right;">n_missing</th>
-<th style="text-align: right;">complete_rate</th>
-<th style="text-align: right;">min</th>
-<th style="text-align: right;">max</th>
-<th style="text-align: right;">empty</th>
-<th style="text-align: right;">n_unique</th>
-<th style="text-align: right;">whitespace</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Sample_Size</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Mean_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Median_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Min_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Q1_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Q3_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Max_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Std_Age</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Sex</td>
-<td style="text-align: right;">0</td>
-<td style="text-align: right;">1</td>
-<td style="text-align: right;">4</td>
-<td style="text-align: right;">6</td>
-<td style="text-align: right;">0</td>
-<td style="text-align: right;">2</td>
-<td style="text-align: right;">0</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Education</td>
-<td style="text-align: right;">0</td>
-<td style="text-align: right;">1</td>
-<td style="text-align: right;">14</td>
-<td style="text-align: right;">23</td>
-<td style="text-align: right;">0</td>
-<td style="text-align: right;">6</td>
-<td style="text-align: right;">0</td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">BMIgroup</td>
-<td style="text-align: right;">0</td>
-<td style="text-align: right;">1</td>
-<td style="text-align: right;">5</td>
-<td style="text-align: right;">11</td>
-<td style="text-align: right;">0</td>
-<td style="text-align: right;">4</td>
-<td style="text-align: right;">0</td>
-</tr>
-</tbody>
-</table>
-<p><strong>Variable type: numeric</strong></p>
-<table class="caption-top table table-sm table-striped small">
-<colgroup>
-<col style="width: 16%">
-<col style="width: 12%">
-<col style="width: 16%">
-<col style="width: 9%">
-<col style="width: 7%">
-<col style="width: 6%">
-<col style="width: 6%">
-<col style="width: 6%">
-<col style="width: 6%">
-<col style="width: 6%">
-<col style="width: 7%">
-</colgroup>
-<thead>
-<tr class="header">
-<th style="text-align: left;">skim_variable</th>
-<th style="text-align: right;">n_missing</th>
-<th style="text-align: right;">complete_rate</th>
-<th style="text-align: right;">mean</th>
-<th style="text-align: right;">sd</th>
-<th style="text-align: right;">p0</th>
-<th style="text-align: right;">p25</th>
-<th style="text-align: right;">p50</th>
-<th style="text-align: right;">p75</th>
-<th style="text-align: right;">p100</th>
-<th style="text-align: left;">hist</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: left;">Age</td>
-<td style="text-align: right;">0</td>
-<td style="text-align: right;">1</td>
-<td style="text-align: right;">50.84</td>
-<td style="text-align: right;">17.61</td>
+<td style="text-align: right;">14017</td>
+<td style="text-align: right;">50.84262</td>
+<td style="text-align: right;">51</td>
 <td style="text-align: right;">16</td>
 <td style="text-align: right;">37</td>
-<td style="text-align: right;">51</td>
 <td style="text-align: right;">65</td>
 <td style="text-align: right;">99</td>
-<td style="text-align: left;">▅▇▇▆▁</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Year</td>
-<td style="text-align: right;">0</td>
-<td style="text-align: right;">1</td>
-<td style="text-align: right;">2014.45</td>
-<td style="text-align: right;">1.11</td>
-<td style="text-align: right;">2013</td>
-<td style="text-align: right;">2013</td>
-<td style="text-align: right;">2014</td>
-<td style="text-align: right;">2015</td>
-<td style="text-align: right;">2016</td>
-<td style="text-align: left;">▇▇▁▇▇</td>
+<td style="text-align: right;">17.60925</td>
 </tr>
 </tbody>
 </table>
+
+
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<table class="table table-striped table-hover caption-top table-sm small" data-quarto-postprocess="true">
+<caption>Summary Statistics of the Dataset</caption>
+<thead>
+<tr class="header">
+<th style="text-align: right;" data-quarto-table-cell-role="th">Sample_Size</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Mean_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Median_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Min_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Q1_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Q3_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Max_Age</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Std_Age</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: right;">14017</td>
+<td style="text-align: right;">50.84262</td>
+<td style="text-align: right;">51</td>
+<td style="text-align: right;">16</td>
+<td style="text-align: right;">37</td>
+<td style="text-align: right;">65</td>
+<td style="text-align: right;">99</td>
+<td style="text-align: right;">17.60925</td>
+</tr>
+</tbody>
+</table>
+
+
 </div>
 </div>
 <p>Key observations from the summary statistics:</p>
@@ -269,17 +200,54 @@ $ BMIgroup  &lt;chr&gt; "Obese", "Overweight", "Normal", "Normal", "Normal", "No
 <li><p>BMI categories contain multiple classifications, which will later be converted into a binary variable for analysis.</p></li>
 </ul>
 </section>
-<section id="identifying-outliers" class="level2">
-<h2 class="anchored" data-anchor-id="identifying-outliers">Identifying outliers:</h2>
+<section id="identifying-distribution-and-checking-normality" class="level2">
+<h2 class="anchored" data-anchor-id="identifying-distribution-and-checking-normality">Identifying Distribution and Checking Normality</h2>
+<p>We use a histogram to visualize the distribution of age and assess normality.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-3-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-5-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
+<p>The histogram reveals that the age distribution in the dataset is approximately&nbsp;<strong>bell-shaped</strong>&nbsp;but slightly&nbsp;<strong>right-skewed</strong>. The majority of individuals fall within the&nbsp;<strong>40-60 age range</strong>, while younger individuals (&lt;20 years) and older individuals (&gt;80 years) are less represented. The right skew suggests that there are&nbsp;<strong>more older individuals in the dataset than younger ones</strong>. While the distribution is close to normal, further statistical tests such as a&nbsp;<strong>Q-Q plot</strong>&nbsp;can confirm normality.</p>
+<p>While the distribution is close to normal, further statistical tests such as a&nbsp;<strong>Q-Q plot</strong>&nbsp;can confirm normality.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-6-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+<p>The&nbsp;<strong>Q-Q plot</strong>&nbsp;provides further insights into the normality of the age distribution. Ideally, if the data follows a normal distribution, the points should closely follow the&nbsp;<strong>diagonal reference line</strong>. However, in the plot:</p>
+<ul>
+<li><p>The points deviate from the&nbsp;<strong>diagonal line at both tails</strong>, suggesting that the age distribution has&nbsp;<strong>heavy tails</strong>&nbsp;and potential skewness.</p></li>
+<li><p>The slight&nbsp;<strong>concave shape</strong>&nbsp;indicates a&nbsp;<strong>right-skewed distribution</strong>, aligning with what was observed in the histogram.</p></li>
+<li><p>This suggests that the data may&nbsp;<strong>not be perfectly normally distributed</strong>, which could influence statistical modeling that assumes normality.</p></li>
+</ul>
+</section>
+<section id="identifying-outliers" class="level2">
+<h2 class="anchored" data-anchor-id="identifying-outliers">Identifying outliers:</h2>
+<p>To detect outliers, we use a&nbsp;<strong>boxplot</strong>&nbsp;to visualize the spread of ages within each&nbsp;</p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-7-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+<p>The boxplot provides a visual summary of the distribution of&nbsp;<strong>age across different BMI categories (Normal, Obese, Overweight, and Underweight)</strong>. Key observations include:</p>
+<ul>
+<li><p>The&nbsp;<strong>median age varies slightly across BMI groups</strong>, with individuals classified as overweight and obese tending to be older than those in the normal or underweight categories.</p></li>
+<li><p>The&nbsp;<strong>interquartile range (IQR)</strong>&nbsp;(middle 50% of the data) shows that most individuals are between&nbsp;<strong>40 and 70 years old</strong>, regardless of BMI classification.</p></li>
+<li><p>There are&nbsp;<strong>potential outliers</strong>, particularly among&nbsp;<strong>younger and older individuals</strong>, indicating that some individuals outside the usual age range may require further investigation.</p></li>
+</ul>
 </section>
 <section id="creating-a-binary-obesity-classification" class="level2">
 <h2 class="anchored" data-anchor-id="creating-a-binary-obesity-classification">Creating a Binary Obesity Classification</h2>
@@ -303,7 +271,7 @@ $ BMIgroup  &lt;chr&gt; "Obese", "Overweight", "Normal", "Normal", "Normal", "No
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-5-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-9-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -322,7 +290,7 @@ $ BMIgroup  &lt;chr&gt; "Obese", "Overweight", "Normal", "Normal", "Normal", "No
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-6-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-10-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -337,7 +305,7 @@ $ BMIgroup  &lt;chr&gt; "Obese", "Overweight", "Normal", "Normal", "Normal", "No
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-7-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-11-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -371,7 +339,7 @@ sample estimates:
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-9-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="Data-analysis-12_files/figure-html/unnamed-chunk-13-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
