--- a/Data analysis 12 main.html
+++ b/Data analysis 12 main.html
@@ -110,7 +110,7 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-<p>Finally, we want to assess the relationship between Education and BMIgroup. In <a href="#fig-bar3">Figure&nbsp;4</a> shows that the education level is related to BMI groups. Individuals with higher educational qualifications generally have higher proportions of normal weight and lower proportions of obesity. Conversely, individuals with fewer or no qualifications show a greater proportion of obesity. Socio-economic factors, represented by education levels, clearly impact obesity rates.</p>
+<p>To assess the impact of socio-economic status, we look at BMI distributions across education levels. Figure 4 shows that individuals with higher education levels (e.g., degrees) tend to have higher proportions of normal weight and lower obesity rates. In contrast, individuals with no qualifications show higher rates of obesity. This highlights how education—and by extension, socio-economic status—may influence obesity.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-bar3" class="quarto-figure quarto-figure-center anchored">
@@ -121,6 +121,7 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
+<p>In summary, our exploratory analysis reveals that while overall BMI trends remained stable between 2013 and 2016, there are notable differences in BMI distributions based on age, gender, socio-economic status, and lifestyle factors. Older age, lower education, and poor dietary habits are associated with higher obesity rates, while gender differences also influence BMI group proportions.</p>
 </section>
 <section id="sec-formdata" class="level1">
 <h1>Formal data analysis</h1>
