fixing merger changes

--- a/Group_6_Analysis.html
+++ b/Group_6_Analysis.html
@@ -334,8 +334,7 @@ logit(\pi) = \beta_0 + \beta_1 x_i + \epsilon_i, ~~~~~ \epsilon_i \sim N(0, \sig
 
 </div>
 </div>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD As seen from the above table, the p-value indicates that sex is a significant predictor at the 5% significance level. Furthermore, the odds ratio for being obese increase by 0.89 for females. ======= As seen from <span class="citation" data-cites="tab-regression2">@tab-regression2</span>, the p-value indicates that sex is a significant predictor at the 5% significance level. Furthermore, the odds ratio for being obese increase by 0.89 for females. &gt;&gt;&gt;&gt;&gt;&gt;&gt; eff281034a051653bb2dfa8d9154fb7e75b781a5</p>
-<p>Again, we check our model assumptions to find out if our results are valid.</p>
+<p>As seen from the above table, the p-value indicates that sex is a significant predictor at the 5% significance level. Furthermore, the odds ratio for being obese increase by 0.89 for females. Again, we check our model assumptions to find out if our results are valid.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-diagnostics2" class="quarto-float quarto-figure quarto-figure-center anchored">
@@ -423,8 +422,7 @@ or equiv]</td>
 
 </div>
 </div>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD As seen from the table above, all the levels of education are considered significant predictors of the persons BMI group. The odds of a person being obese is 3.05 for a person with a degree, then increases by 0.53-0.84 depending on qualification level. ======= As seen from <span class="citation" data-cites="tab-regression3">@tab-regression3</span>, all the levels of education are considered significant predictors of the persons BMI group. The odds of a person being obese is 3.05 for a person with a degree, then increases by 0.53-0.84 depending on qualification level. &gt;&gt;&gt;&gt;&gt;&gt;&gt; eff281034a051653bb2dfa8d9154fb7e75b781a5</p>
-<p>Again, we have to check the model assumptions.</p>
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD As seen from the table above, all the levels of education are considered significant predictors of the persons BMI group. The odds of a person being obese is 3.05 for a person with a degree, then increases by 0.53-0.84 depending on qualification level. Again, we have to check the model assumptions.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-diagnostics3" class="quarto-float quarto-figure quarto-figure-center anchored">
