removing merge issue

--- a/Group_6_Analysis.html
+++ b/Group_6_Analysis.html
@@ -422,7 +422,7 @@ or equiv]</td>
 
 </div>
 </div>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD As seen from the table above, all the levels of education are considered significant predictors of the persons BMI group. The odds of a person being obese is 3.05 for a person with a degree, then increases by 0.53-0.84 depending on qualification level. Again, we have to check the model assumptions.</p>
+<p>As seen from the table above, all the levels of education are considered significant predictors of the persons BMI group. The odds of a person being obese is 3.05 for a person with a degree, then increases by 0.53-0.84 depending on qualification level. Again, we have to check the model assumptions.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-diagnostics3" class="quarto-float quarto-figure quarto-figure-center anchored">
