updated reference and pdf

--- a/Group_6_Analysis.html
+++ b/Group_6_Analysis.html
@@ -150,7 +150,7 @@ Figure&nbsp;3: Bar plot showing the relationship between Sex and BMIgroup
 </div>
 </div>
 </div>
-<p>To assess the impact of socio-economic status, we look at BMI distributions across education levels. Figure 4 shows that individuals with higher education levels (e.g., degrees) tend to have higher proportions of normal weight and lower obesity rates. In contrast, individuals with no qualifications show higher rates of obesity. This highlights how education - and by extension, socio-economic status - may influence obesity.</p>
+<p>To assess the impact of socio-economic status, we look at BMI distributions across education levels. <a href="#fig-bar3" class="quarto-xref">Figure&nbsp;4</a> shows that individuals with higher education levels (e.g., degrees) tend to have higher proportions of normal weight and lower obesity rates. In contrast, individuals with no qualifications show higher rates of obesity. This highlights how education - and by extension, socio-economic status - may influence obesity.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-bar3" class="quarto-float quarto-figure quarto-figure-center anchored">
